Fixed activity module and completed the workspaec module successfully